--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,20 @@
+body {
+    background-image: url("../images/pink_dust.png.png");
+}
+
+
+h1 {
+    color: mediumvioletred;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size: 32px;
+}
+
+p, h3 {
+    color: mediumvioletred;
+    font-size: 20px;
+
+}
+
 .crystalimg {
     height: 50px;
     width : 50px;
